[metadata]
name = PyQBDI
version = 0.12.2a1
description = Python binding for QBDI
long_description = file: README-pypi.rst
long_description_content_type = text/x-rst
license = apache2
license_files =
    LICENSE.txt
author = Nicolas Surbayrole
author_email = qbdi@quarkslab.com
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Security
    Topic :: Software Development :: Debuggers
project_urls =
    Documentation = https://qbdi.readthedocs.io/
    Source = https://github.com/QBDI/QBDI
    Homepage = https://qbdi.quarkslab.com/

[options]
zip_safe = false
python_requires = >= 3.8
setup_requires =
    setuptools
    wheel
