cmake_minimum_required (VERSION 3.2)
project(QBDITemplate)

if(UNIX)
    set(ENV{PKG_CONFIG_PATH} "${CMAKE_INSTALL_PREFIX}/lib/pkgconfig/:$ENV{PKG_CONFIG_PATH}")
    include(FindPkgConfig)
    pkg_check_modules(QBDI REQUIRED qbdi)
elseif(MSVC)
    file(GLOB QBDI_SEARCH_PATHS "C:/Program Files/QBDI*")
    find_path(QBDI_ROOT_DIR "frida-qbdi.js" PATHS ${QBDI_SEARCH_PATHS})
    message(STATUS "Found QBDI at \"${QBDI_ROOT_DIR}\"")
    find_library(QBDI_LIBRARIES QBDI_static PATHS "${QBDI_ROOT_DIR}/lib")
    set(QBDI_INCLUDE_DIRS "${QBDI_ROOT_DIR}/include")
    set(QBDI_FOUND QBDI_LIBRARIES)
endif()

if(NOT QBDI_FOUND)
    find_path(QBDI_ROOT_DIR "LICENSE.txt" PATHS "../" "../../")
    find_library(QBDI_LIBRARIES QBDI PATHS "${QBDI_ROOT_DIR}/lib")
    set(QBDI_INCLUDE_DIRS "${QBDI_ROOT_DIR}/include")
endif()

add_executable(qbdi_template qbdi_template.c)
target_include_directories(qbdi_template PUBLIC ${QBDI_INCLUDE_DIRS})
target_link_libraries(qbdi_template ${QBDI_LIBRARIES})
